# StructOfDataAndAlgoritmHomework

./: .gitignore
homework1/: CMakeLists.txt  main.cpp
homework1/libs/Date/: Date.cpp  Date.h
homework1/libs/List/: List.cpp  List.h
homework1/libs/Products/: Product.cpp  Product.h
homework2/: CMakeLists.txt  main.cpp
homework2/libs/List/: List.cpp  List.h
homework2/libs/Transports/: Transport.cpp  Transport.h
homework2/libs/Transports/Car/: Car.cpp  Car.h
homework2/libs/Transports/Plane/: Plane.cpp  Plane.h
homework2/libs/Transports/Train/: Train.cpp  Train.h
homework2/libs/Transports/Type/: Type.cpp  Type.h
homework3/: CMakeLists.txt  main.cpp  test.txt
homework3/libs/Date/: Date.cpp
homework3/libs/Errors/: Errors.h
homework3/libs/List/: List.cpp  List.h
homework3/libs/Products/: Product.cpp  Product.h
